--- a/start.html
+++ b/start.html
@@ -6,6 +6,7 @@
 
 		<title>QS</title>
 
+		<link rel="stylesheet" href="css/shared/animations.css">
 		<link rel="stylesheet" href="css/shared/form.css">
 		<link rel="stylesheet" href="css/shared/global.css">
 		<link rel="stylesheet" href="css/shared/overlay.css">
@@ -16,10 +17,12 @@
 		<script src="js/shared/dialog.js"></script>
 		<script src="js/shared/overlay.js"></script>
 		<script src="js/shared/shared.js"></script>
+		<script src="js/shared/tooltip.js"></script>
 
 		<script src="js/app/app.js"></script>
 		<script src="js/app/git.js"></script>
 		<script src="js/app/keyboard.js"></script>
+		<script src="js/app/xml.js"></script>
 		<script src="js/app/init.js"></script>
 	</head>
 	<body>
@@ -31,11 +34,12 @@
 					><a href="#" id="view-xml" class="view-button active">XML</a
 					><a href="#" id="view-hints" class="view-button">Hinweise</a
 					><a href="#" id="view-clusters" class="view-button">Clusterei</a
-					><a href="#" id="view-search" class="view-button">Suche</a
+					><a href="#" id="view-search" class="view-button" title="&lt;i&gt;Tastatur:&lt;/i&gt; Strg + F">Suche</a
 				></div>
 				<div id="fun"
 					><span class="label">Funktionen:</span
-					><a href="#" id="fun-filters" class="view-button">Filter</a
+					><a href="#" id="fun-filters" class="view-button" title="&lt;i&gt;Tastatur:&lt;/i&gt; Strg + Umsch + F">Filter</a
+					><a href="#" id="fun-update" class="view-button" title="&lt;i&gt;Tastatur:&lt;/i&gt; F5"><img src="img/app/view-refresh-white.svg" width="30" height="30" alt="">Update</a
 					><span id="fun-git"
 						><span class="label">Git:</span
 						><a href="#" id="fun-git-branch" title="aktuellen Branch wechseln"></a
@@ -71,7 +75,7 @@
 			<div id="filters-status">
 				<h1>Status</h1>
 			</div>
-			<div id="filters-hints">
+			<div id="filters-hints" class="off">
 				<h1>Markierungen</h1>
 				<h1>Hinweise</h1>
 			</div>
@@ -104,15 +108,35 @@
 		<!-- OVERLAY: PREFERENCES -->
 		<div id="prefs" class="overlay hide off">
 			<div>
-				<h1>Einstellungen<a href="#" class="overlay-close"><img src="img/app/close-white.svg" width="30" height="30" alt="x"></a></h1>
-				<p>TODO</p>
+				<h1>Einstellungen<a href="#" class="overlay-close" title="&lt;i&gt;Tastatur:&lt;/i&gt; Esc"><img src="img/app/close-white.svg" width="30" height="30" alt="x"></a></h1>
+				<div>
+					<ul>
+						<li><a href="#allgemeines" class="active">Allgemeines</a></li>
+						<li><a href="#git">Git</a></li>
+					</ul>
+					<div>
+						<div id="prefs-allgemeines" class="prefs-section">
+						</div>
+						<div id="prefs-git" class="prefs-section off">
+							<p class="prefs-git"
+								><i>Benutzername:</i><span id="prefs-git-user"></span
+							></p>
+							<p class="prefs-git"
+								><i>Reposiory:</i><span id="prefs-git-dir"></span
+							></p>
+							<p class="buttons"
+								><input type="button" value="Konfiguration" id="prefs-git-config"
+							></p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
 		<!-- OVERLAY: DIALOG -->
 		<div id="dialog" class="overlay hide off">
 			<div>
-				<a href="#" class="overlay-close"><img src="img/app/close.svg" width="30" height="30" alt="x"></a>
+				<a href="#" class="overlay-close" title="&lt;i&gt;Tastatur:&lt;/i&gt; Esc"><img src="img/app/close.svg" width="30" height="30" alt="x"></a>
 				<div id="dialog-text"></div>
 				<p class="buttons" id="dialog-alert"
 					><input type="button" value="Okay" data-response="true" id="dialog-okay"
