--- a/start.html
+++ b/start.html
@@ -13,6 +13,8 @@
 		<link rel="stylesheet" href="css/shared/variables.css">
 
 		<link rel="stylesheet" href="css/app/app.css">
+		<link rel="stylesheet" href="css/app/overlay.css">
+		<link rel="stylesheet" href="css/app/viewXml.css">
 
 		<script src="js/shared/dialog.js"></script>
 		<script src="js/shared/overlay.js"></script>
@@ -22,6 +24,11 @@
 		<script src="js/app/app.js"></script>
 		<script src="js/app/git.js"></script>
 		<script src="js/app/keyboard.js"></script>
+		<script src="js/app/prefs.js"></script>
+		<script src="js/app/viewClusters.js"></script>
+		<script src="js/app/viewHints.js"></script>
+		<script src="js/app/viewSearch.js"></script>
+		<script src="js/app/viewXml.js"></script>
 		<script src="js/app/xml.js"></script>
 		<script src="js/app/init.js"></script>
 	</head>
@@ -54,6 +61,7 @@
 
 		<!-- VIEW: XML -->
 		<section id="xml">
+			<div id="xml-tab"> </div>
 		</section>
 
 		<!-- VIEW: HINWEISE -->
@@ -97,7 +105,7 @@
 				<p
 					><label for="git-dir">Repository</label
 					><input type="text" value="" placeholder="Pfad zum Wortgeschichten-Repository" id="git-dir" readonly tabindex="-1"
-					><a href="#" id="git-dir-open" class="icon"><img src="img/app/file-open.svg" width="30" height="30" alt=""></a
+					><a href="#" id="git-dir-open" class="icon" title="Ordner auswählen"><img src="img/app/open-dir.svg" width="30" height="30" alt=""></a
 				></p>
 				<p class="buttons"
 					><input type="button" value="Okay" id="git-okay"
@@ -113,23 +121,46 @@
 					<ul>
 						<li><a href="#allgemeines" class="active">Allgemeines</a></li>
 						<li><a href="#git">Git</a></li>
+						<li><a href="#externe">Externe Daten</a></li>
 					</ul>
 					<div>
+						<!-- Allgemeines -->
 						<div id="prefs-allgemeines" class="prefs-section">
 						</div>
+
+						<!-- Git -->
 						<div id="prefs-git" class="prefs-section off">
 							<p class="prefs-git"
 								><i>Benutzername:</i><span id="prefs-git-user"></span
 							></p>
 							<p class="prefs-git"
-								><i>Reposiory:</i><span id="prefs-git-dir"></span
+								><i>Repository:</i><span id="prefs-git-dir"></span
 							></p>
 							<p class="buttons"
 								><input type="button" value="Konfiguration" id="prefs-git-config"
 							></p>
 						</div>
+
+						<!-- Externe Daten -->
+						<div id="prefs-externe" class="prefs-section off">
+							<p><label for="prefs-zeitstrahl">Zeitstrahldaten</label></p>
+							<p
+								><input type="text" value="" placeholder="Pfad zur data.json" id="prefs-zeitstrahl" readonly tabindex="-1"
+								><a href="#" id="prefs-zeitstrahl-open" class="icon" title="Datei auswählen"><img src="img/app/open-file.svg" width="30" height="30" alt=""></a
+								><a href="#" id="prefs-zeitstrahl-remove" class="icon" title="Datei entkoppeln"><img src="img/app/delete.svg" width="30" height="30" alt=""></a
+							></p>
+						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<!-- OVERLAY: SUMMARY -->
+		<div id="summary" class="overlay hide off">
+			<div>
+				<h1>Kurz gefasst / <span></span><a href="#" class="overlay-close" title="&lt;i&gt;Tastatur:&lt;/i&gt; Esc"><img src="img/app/close-white.svg" width="30" height="30" alt="x"></a></h1>
+				<p></p>
+				<code></code>
 			</div>
 		</div>
 
