--- a/win/pv-error.html
+++ b/win/pv-error.html
@@ -4,15 +4,14 @@
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 
-		<title>QS / Loading</title>
+		<title>QS / Fehler</title>
 
-		<link rel="stylesheet" href="../css/shared/animations.css">
+		<link rel="stylesheet" href="../css/shared/global.css">
+		<link rel="stylesheet" href="../css/shared/variables.css">
 
 		<link rel="stylesheet" href="../css/win/pv-webview.css">
 	</head>
 	<body>
-		<div
-			><img src="../img/app/view-refresh.svg" width="96" height="96" alt="" class="rotate"
-		></div>
+		<h1>Es ist ein Fehler aufgetreten!</h1>
 	</body>
 </html>
