--- a/win/pv-loading.html
+++ b/win/pv-loading.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div
-			><img src="../img/app/view-refresh.svg" width="96" height="96" alt="" class="rotate"
+			><img src="../img/app/loading.svg" width="96" height="96" alt="" class="rotate"
 		></div>
 	</body>
 </html>
