--- a/start.html
+++ b/start.html
@@ -20,6 +20,7 @@
 
 		<script src="js/shared/dialog.js"></script>
 		<script src="js/shared/overlay.js"></script>
+		<script src="js/shared/popup.js"></script>
 		<script src="js/shared/shared.js"></script>
 		<script src="js/shared/tooltip.js"></script>
 
@@ -29,6 +30,7 @@
 		<script src="js/app/keyboard.js"></script>
 		<script src="js/app/prefs.js"></script>
 		<script src="js/app/tags.js"></script>
+		<script src="js/app/updates.js"></script>
 		<script src="js/app/viewClusters.js"></script>
 		<script src="js/app/viewHints.js"></script>
 		<script src="js/app/viewSearch.js"></script>
@@ -200,7 +202,7 @@
 		<!-- BAR: RESULTS -->
 		<div id="results">
 			<div>
-				<p id="results-summary"></p>
+				<p id="results-summary" class="nothing">Noch nichts gesucht!</p>
 				<div id="results-queries" class="off"></div>
 				<div id="results-files" class="off"></div>
 			</div>
