--- a/win/pv.html
+++ b/win/pv.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="../css/win/pv.css">
 
 		<script src="../js/shared/overlay.js"></script>
+		<script src="../js/shared/popup.js"></script>
 		<script src="../js/shared/shared.js"></script>
 		<script src="../js/shared/tooltip.js"></script>
 
