--- a/start.html
+++ b/start.html
@@ -2,7 +2,7 @@
 <html lang="de">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://github.com/WortgeschichteDigital/QS/">
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://www.deutschestextarchiv.de/demo/cab/ https://github.com/WortgeschichteDigital/QS/">
 
 		<title>QS</title>
 
@@ -28,6 +28,7 @@
 		<script src="js/app/bars.js"></script>
 		<script src="js/app/error.js"></script>
 		<script src="js/app/git.js"></script>
+		<script src="js/app/hints.js"></script>
 		<script src="js/app/keyboard.js"></script>
 		<script src="js/app/prefs.js"></script>
 		<script src="js/app/tags.js"></script>
