--- a/win/help.html
+++ b/win/help.html
@@ -19,7 +19,7 @@
 
 		<script src="../js/win/help.js"></script>
 		<script src="../js/win/keyboard.js"></script>
-		<script src="../js/win/help-init.js"></script>
+		<script src="../js/win/helpInit.js"></script>
 	</head>
 	<body>
 		<main>
