--- a/win/pv.html
+++ b/win/pv.html
@@ -19,7 +19,7 @@
 		<script src="../js/shared/tooltip.js"></script>
 
 		<script src="../js/win/pv.js"></script>
-		<script src="../js/win/pv-init.js"></script>
+		<script src="../js/win/pvInit.js"></script>
 	</head>
 	<body>
 		<!-- HEADER -->
@@ -44,7 +44,7 @@
 		</header>
 
 		<!-- WEBVIEW -->
-		<webview src="pv-loading.html"></webview>
+		<webview src="pvLoading.html"></webview>
 
 		<!-- OVERLAY: LOADING -->
 		<div id="loading" class="overlay"
