--- a/win/pvError.html
+++ b/win/pvError.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="../css/shared/global.css">
 		<link rel="stylesheet" href="../css/shared/variables.css">
 
-		<link rel="stylesheet" href="../css/win/pv-webview.css">
+		<link rel="stylesheet" href="../css/win/pvWebview.css">
 	</head>
 	<body>
 		<h1>Es ist ein Fehler aufgetreten!</h1>
