--- a/win/pvLoading.html
+++ b/win/pvLoading.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="../css/shared/animations.css">
 
-		<link rel="stylesheet" href="../css/win/pv-webview.css">
+		<link rel="stylesheet" href="../css/win/pvWebview.css">
 	</head>
 	<body>
 		<div
