--- a/win/about.html
+++ b/win/about.html
@@ -17,7 +17,7 @@
 		<script src="../js/shared/shared.js"></script>
 
 		<script src="../js/win/about.js"></script>
-		<script src="../js/win/about-init.js"></script>
+		<script src="../js/win/aboutInit.js"></script>
 	</head>
 	<body>
 		<!-- ABOUT -->
