--- a/start.html
+++ b/start.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="css/app/app.css">
 		<link rel="stylesheet" href="css/app/bars.css">
 		<link rel="stylesheet" href="css/app/overlay.css">
+		<link rel="stylesheet" href="css/app/viewHints.css">
 		<link rel="stylesheet" href="css/app/viewSearch.css">
 		<link rel="stylesheet" href="css/app/viewXml.css">
 
@@ -216,7 +217,7 @@
 						><label for="filters-hints-links_suggestion">Verweise: Verlinkungen</label
 					></p>
 					<p class="indent"
-						><input type="checkbox" id="filters-hints-links_suggestion_filter" checked
+						><input type="checkbox" id="filters-hints-links_suggestion_filter"
 						><label for="filters-hints-links_suggestion_filter">Vorschläge reduzieren</label
 					></p>
 					<p
@@ -240,7 +241,7 @@
 						><label for="filters-hints-comment">Kommentare</label
 					></p>
 					<p class="indent"
-						><input type="checkbox" id="filters-hints-comment_filter" checked
+						><input type="checkbox" id="filters-hints-comment_filter"
 						><label for="filters-hints-comment_filter">nur mit Autorentext</label
 					></p>
 				</div>
@@ -364,7 +365,10 @@
 					><span></span
 					><a href="#" data-forward="true">&gt;</a
 				></div>
-				<h2 id="tags-label"></h2>
+				<h2 id="tags-label"
+					><span></span
+					><a href="#" id="tags-open-file" class="icon"><img src="img/app/open-file.svg" width="30" height="30" alt=""></a
+				></h2>
 				<code id="tags-code"></code>
 			</div>
 		</div>
