--- a/start.html
+++ b/start.html
@@ -100,10 +100,13 @@
 				><a href="#" id="sorting-time" class="icon" title="&lt;i&gt;Sortierung:&lt;/i&gt; nach Publikationsdatum"
 					><img src="img/app/time.svg" width="30" height="30" alt=""
 				></a
-				><span
+				><span id="sorting-filter-cont"
 					><input type="text" value="" placeholder="Dateipfad-Filter" id="sorting-filter"
 					><a href="#" class="clear-text-field"
 						><img src="img/app/clear-text.svg" width="24" height="24" alt=""
+					></a
+					><a href="#" id="hints-bar"
+						><img src="img/app/sidebar.svg" width="24" height="24" alt=""
 					></a
 				></span
 			></div>
