--- a/start.html
+++ b/start.html
@@ -370,6 +370,7 @@
 				></div>
 				<h2 id="tags-label"
 					><span></span
+					><a href="#" id="tags-show-teaser" class="icon"><img src="img/app/preview.svg" width="30" height="30" alt=""></a
 					><a href="#" id="tags-open-file" class="icon"><img src="img/app/open-file.svg" width="30" height="30" alt=""></a
 				></h2>
 				<code id="tags-code"></code>
